# gaussian-results-py

./: AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/gaussian_job_results/: __init__.py  _json_safe.py  discovery.py  exporter.py  fixtures.py  mol2_reader.py  parser.py  partial_charges.py  result.py  serializer.py
tests/: conftest.py  test_discovery.py  test_exporter.py  test_json_safe.py  test_mol2_reader.py  test_parser.py  test_parser_helpers.py  test_partial_charges.py  test_serializer.py
tests/fixtures/replica/ROSDSFDQCJNGOL-UHFFFAOYSA-O/: main.gjf  main.out
